# gotify-desktop

./: .gitignore  IFLOW.md  LICENSE  README.md  README_CN.md  debug-ws.html  package.json  test-event.html  test-websocket.js
.github/workflows/: ci.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: gotify.rs  main.rs  tests.rs
