[package]
name = "gotify-desktop"
version = "0.2.0"
description = "A cross-platform desktop client for Gotify"
authors = ["you"]
license = "MIT"
repository = "https://github.com/yourusername/gotify-desktop"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]

[features]
default = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.dev]
debug = true

[profile.dev.package."*"]
opt-level = 0
